force-app/main/default/objects/Student_Program_Plan__c/Student_Program_Plan__c.object-meta.xml
<CustomObject>
    <description>[Peoplesoft] - Academic History of student's enrollment. Lists the related College (Program) and Major (Plan) with its current status.</description>
    <label>Student Program Plan</label>
    <nameField>
        <displayFormat>{000000}-{YYYY}-{MM}-{DD}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Program Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>