force-app/main/default/objects/Student_Program_Plan__c/fields/Academic_Standing__c.field-meta.xml
<CustomField>
    <fullName>Academic_Standing__c</fullName>
    <description>(PeopleSoft) PS_ACAD_STDNG_ACTN JOIN PS_ACAD_STACTN_TBL.DESCR</description>
    <label>Academic Standing</label>
    <length>30</length>
    <type>Text</type>
</CustomField>