force-app/main/default/objects/Student_Program_Plan__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.PROG_ACTION</description>
    <label>Program Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activate</fullName>
            </value>
            <value>
                <fullName>Completion of Program</fullName>
            </value>
            <value>
                <fullName>Data Change</fullName>
            </value>
            <value>
                <fullName>Discontinuation</fullName>
            </value>
            <value>
                <fullName>Matriculation</fullName>
            </value>
            <value>
                <fullName>Plan Change</fullName>
            </value>
            <value>
                <fullName>Program Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>