force-app/main/default/objects/Student_Program_Plan__c/fields/Action_Reason__c.field-meta.xml
<CustomField>
    <fullName>Action_Reason__c</fullName>
    <description>Data sourced from PROG_RSN_TBL.DESCR</description>
    <label>Action Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application Withdrawn</fullName>
            </value>
            <value>
                <fullName>Applied to Graduate</fullName>
            </value>
            <value>
                <fullName>Concurrent Approved Program</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Courtesy App - Cert Prog Only</fullName>
            </value>
            <value>
                <fullName>Division of Graduate Studies</fullName>
            </value>
            <value>
                <fullName>Grad POS Sub-Plan Chg</fullName>
            </value>
            <value>
                <fullName>Minor Added</fullName>
            </value>
            <value>
                <fullName>Non-degree to Degree</fullName>
            </value>
            <value>
                <fullName>Not Enrolled in Previous Term</fullName>
            </value>
            <value>
                <fullName>Requirement term changed</fullName>
            </value>
            <value>
                <fullName>Student Request</fullName>
            </value>
            <value>
                <fullName>Voluntary Withdrawal (GRAD)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>