force-app/main/default/objects/Student_Program_Plan__c/fields/Adm_Appl_Dt__c.field-meta.xml
<CustomField>
    <fullName>Adm_Appl_Dt__c</fullName>
    <description>(PeopleSoft) PS_ADM_APPL_DATA.ADM_APPL_DT</description>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>