force-app/main/default/objects/Student_Program_Plan__c/fields/Adm_Appl_Prog__c.field-meta.xml
<CustomField>
    <fullName>Adm_Appl_Prog__c</fullName>
    <description>(PeopleSoft) PS_ADM_APPL_PROG.ACAD_PROG</description>
    <label>Application Program</label>
    <length>30</length>
    <type>Text</type>
</CustomField>