force-app/main/default/objects/Student_Program_Plan__c/fields/Admission_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Admission_Type_Description__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(Peoplesoft) Lookup from PS_ASU_SR0189_SPRF.ADMIT_TYPE to PS_ADMIT_TYPE_TBL.DESCR.
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Admission Type Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>