force-app/main/default/objects/Student_Program_Plan__c/fields/Admit_Term__c.field-meta.xml
<CustomField>
    <fullName>Admit_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Data sourced from PS_ACAD_PROG.ADMIT_TERM</description>
    <label>Admit Term</label>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Student Program Plans</relationshipLabel>
    <relationshipName>Student_Program_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>