force-app/main/default/objects/Student_Program_Plan__c/fields/Admit_Type__c.field-meta.xml
<CustomField>
    <fullName>Admit_Type__c</fullName>
    <description>(PeopleSoft) PS_ADM_APPL_DATA.ADMIT_TYPE</description>
    <label>Admission Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>