force-app/main/default/objects/Student_Program_Plan__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.ADM_APPL_NBR</description>
    <label>Application Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>