force-app/main/default/objects/Student_Program_Plan__c/fields/Appt_Dt__c.field-meta.xml
<CustomField>
    <fullName>Appt_Dt__c</fullName>
    <description>(PeopleSoft) PS_APPOINTMENT_DT.APPT_DT</description>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>