force-app/main/default/objects/Student_Program_Plan__c/fields/Appt_Dt_Pending__c.field-meta.xml
<CustomField>
    <fullName>Appt_Dt_Pending__c</fullName>
    <description>(PeopleSoft) PS_APPOINTMENT_DT.APPT_DT for next term</description>
    <label>Pending Appointment Date</label>
    <type>Date</type>
</CustomField>