force-app/main/default/objects/Student_Program_Plan__c/fields/ASU_AA_OVRL_GPA__c.field-meta.xml
<CustomField>
    <fullName>ASU_AA_OVRL_GPA__c</fullName>
    <description>(PeopleSoft) PS_ASU_POS_BTCH 
.ASU_AA_OVRL_GPA</description>
    <label>Overall GPA</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>