force-app/main/default/objects/Student_Program_Plan__c/fields/ASU_AA_POS_GPA__c.field-meta.xml
<CustomField>
    <fullName>ASU_AA_POS_GPA__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(PeopleSoft) PS_ASU_POS_BTCH .ASU_AA_POS_GPA</description>
    <label>Plan of Study GPA</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>