force-app/main/default/objects/Student_Program_Plan__c/fields/ASUPGA_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>ASUPGA_Checkbox__c</fullName>
    <businessOwnerGroup>Data_Owner_Graduate_College</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>If this field is marked as TRUE then the student received an ASU Personalized Graduate Admissions (ASUPGA) offer. This data for this field is sourced from PS_ASU_AA_AA_ELIG in PeopleSoft.</description>
    <formula>OR(
    ISPICKVAL(ASUPGA_Status__c, "Offered"),
    ISPICKVAL(ASUPGA_Status__c, "Accepted"),
    ISPICKVAL(ASUPGA_Status__c, "Declined"),
    ISPICKVAL(ASUPGA_Status__c, "Cancelled")
)</formula>
    <inlineHelpText>This field indicates if the student was offered a Personalized Graduate Admissions opportunity.</inlineHelpText>
    <label>ASUPGA Checkbox</label>
    <type>Checkbox</type>
</CustomField>