force-app/main/default/objects/Student_Program_Plan__c/fields/ASUPGA_Status__c.field-meta.xml
<CustomField>
    <fullName>ASUPGA_Status__c</fullName>
    <businessOwnerGroup>Data_Owner_Graduate_College</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>ASUPGA eligibility is determined by the student's ASUPGA status. This field is updated during the ASUPGA process, either by the student's actions (accept/decline) or automatically by the system if no action is taken (cancelled). The data for this field is sourced from PS_ASU_AA_AA_ELIG in PeopleSoft.</description>
    <inlineHelpText>This field indicates the current status of the student's ASUPGA offer. The possible statuses are:

    Offered: The offer has been made to the student.

    Accepted: The student has accepted the offer.

    Declined: The student has declined the offer.

    Cancelled: The deadline for the offer has passed and the student is no longer eligible for ASUPGA.

    Not Eligible: The student is not eligible for the offer.</inlineHelpText>
    <label>ASUPGA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>