force-app/main/default/objects/Student_Program_Plan__c/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Data sourced from PS_ACAD_PROG.CAMPUS</description>
    <label>Campus</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Student Program Plans</relationshipLabel>
    <relationshipName>Student_Program_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>