force-app/main/default/objects/Student_Program_Plan__c/fields/Career__c.field-meta.xml
<CustomField>
    <fullName>Career__c</fullName>
    <description>Data sourced from PS_ACAD_CAR_TBL.DESCR</description>
    <label>Career</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>