force-app/main/default/objects/Student_Program_Plan__c/fields/Career_Number__c.field-meta.xml
<CustomField>
    <fullName>Career_Number__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.STDNT_CAR_NBR</description>
    <label>Career Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>