force-app/main/default/objects/Student_Program_Plan__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <description>FTFF + PS_ASU_SR0189_SPRF .ASU_ACAD_LVL_BOT_D</description>
    <label>Cohort</label>
    <length>50</length>
    <type>Text</type>
</CustomField>