force-app/main/default/objects/Student_Program_Plan__c/fields/College_Diploma_Description__c.field-meta.xml
<CustomField>
    <fullName>College_Diploma_Description__c</fullName>
    <description>Data sourced from PS_ACAD_PLAN_TBL.DIPLOMA_DESCR</description>
    <label>College Diploma Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>