force-app/main/default/objects/Student_Program_Plan__c/fields/Completion_Term__c.field-meta.xml
<CustomField>
    <fullName>Completion_Term__c</fullName>
    <description>Data sourced from PS_TERM_TBL.DESCR</description>
    <label>Completion Term</label>
    <length>30</length>
    <type>Text</type>
</CustomField>