force-app/main/default/objects/Student_Program_Plan__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Data sourced from PS_ACAD_PROG.EMPLID</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student Program Plans</relationshipLabel>
    <relationshipName>Student_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>