force-app/main/default/objects/Student_Program_Plan__c/fields/Cum_GPA__c.field-meta.xml
<CustomField>
    <fullName>Cum_GPA__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(PeopleSoft) PS_ASU_SR0189_SPRF.CUM_GPA; GPA of all grades a student has acquired in their semester/term/program.</description>
    <label>Cumulative GPA</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>