force-app/main/default/objects/Student_Program_Plan__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <description>Data sourced from PS_ACAD_PLAN_TBL.Degree</description>
    <label>Degree</label>
    <length>30</length>
    <type>Text</type>
</CustomField>