force-app/main/default/objects/Student_Program_Plan__c/fields/Degree_Checkout_Status_Name__c.field-meta.xml
<CustomField>
    <fullName>Degree_Checkout_Status_Name__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(PeopleSoft) PSXLATITEM.XLATLONGNAME
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Degree Checkout Status Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>