force-app/main/default/objects/Student_Program_Plan__c/fields/Degree_Chkout_Stat_Code__c.field-meta.xml
<CustomField>
    <fullName>Degree_Chkout_Stat_Code__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(PeopleSoft) PS_ASU_SPRF_CURR.DEGR_CHKOUT_STAT
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Degree Chkout Stat Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>