force-app/main/default/objects/Student_Program_Plan__c/fields/Degree_Conferral_Date__c.field-meta.xml
<CustomField>
    <fullName>Degree_Conferral_Date__c</fullName>
    <description>Data sourced from PS_ACAD_DEGR.DEGR_CONFER_DT</description>
    <label>Degree Conferral Date</label>
    <type>Date</type>
</CustomField>