force-app/main/default/objects/Student_Program_Plan__c/fields/Degree_Level__c.field-meta.xml
<CustomField>
    <fullName>Degree_Level__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(Peoplesoft) Degree level from PS_DEGEE_TBL.DESCRFORMAL for Degree type of CERT or PSXLATITEM.XLATLONGNAME on EDUCATION_LVL for other degree types
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Degree Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>