force-app/main/default/objects/Student_Program_Plan__c/fields/eAdvisor__c.field-meta.xml
<CustomField>
    <fullName>eAdvisor__c</fullName>
    <description>ASU_SR0189_SPRF.ASU_TRACK_STAT_DES if PS_ASU_SR0189_SBYT.ASU_CT_STDNT_GRP like CT%</description>
    <label>eAdvisor Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>