force-app/main/default/objects/Student_Program_Plan__c/fields/Education_Level__c.field-meta.xml
<CustomField>
    <fullName>Education_Level__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(Peoplesoft) EDUCATION_LVL from PS_ASU_SPRF_CURR OR PS_ASU_SR0189_SPRF
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Education Level</label>
    <length>2</length>
    <type>Text</type>
</CustomField>