force-app/main/default/objects/Student_Program_Plan__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.EFFDT</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>