force-app/main/default/objects/Student_Program_Plan__c/fields/Enrl_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Enrl_Deposit__c</fullName>
    <description>(PeopleSoft) PS_ASU_AD0107_STAT
Where ENR_DEP.ASU_ED_STATUS IN ('PAID', 'ADMR', 'DEFR')</description>
    <label>Enrollment Deposit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>