force-app/main/default/objects/Student_Program_Plan__c/fields/Enrl_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Enrl_Hrs__c</fullName>
    <description>(PeopleSoft)
PS_ASU_SR0189_SBYT.ASU_STATE_UNT_TAK  + PS_ASU_SR0189_SBYT.ASU_NSTATE_UNT_TAK</description>
    <label>Total Enrolled Hours</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>