force-app/main/default/objects/Student_Program_Plan__c/fields/Enrolled_Next_Term__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Next_Term__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(Peoplesoft) Enrolled in Next Term should accurately reflect students not enrolled in the target term, excluding students who are:
a.     Active (Prog_Status = ‘AC’)
b.     Not applied to graduate (Asu_Stdnt_Profile_Maj_Term.Exp_Grad_Term current term or in the past acad year)
c.     Not deceased (Srvc_Ind_Cd = ‘S00’)
d.     Not discontinued or disqualified (Acad_Std_Bot IN (‘DIS’, ‘DSQ’)
e.     Don’t have a Student Life hold (Srvc_Ind_Cd IN (‘S03’, ‘S53’, ‘S54’, ‘S55’
f.      Not in program UGPR (mostly exchange and visiting status)
g.     Past their enrollment appointment open date (Ps_Appointment_Tbl.Appt_Start_Dt &lt; Sysdate or is null)
Visible on the Student Profile on the Graduate Indicators tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Enrolled Next Term</label>
    <length>1</length>
    <type>Text</type>
</CustomField>