force-app/main/default/objects/Student_Program_Plan__c/fields/Exp_Grad_Term__c.field-meta.xml
<CustomField>
    <fullName>Exp_Grad_Term__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(PeopleSoft) PS_ASU_SR0189_SPRF.EXP_GRAD_TERM</description>
    <label>Expected Graduation Term</label>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Student Program Plans (Expected Graduation Term)</relationshipLabel>
    <relationshipName>Student_Program_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>