force-app/main/default/objects/Student_Program_Plan__c/fields/Grad_Advanced_To_Candidacy__c.field-meta.xml
<CustomField>
    <fullName>Grad_Advanced_To_Candidacy__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(Peoplesoft) When the date field is populated, the student has advanced to candidacy. The issue with using this date field is that it is always populated in the iPOS table even if it doesn’t apply to the program. For example, if the program is a Master’s program and the student wouldn’t advance to candidacy. PS_ASU_AA_POS.ASU_AA_CNDDCY_DT
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Grad Advanced To Candidacy</label>
    <length>5</length>
    <type>Text</type>
</CustomField>