force-app/main/default/objects/Student_Program_Plan__c/fields/Grad_Anticipated_Term__c.field-meta.xml
<CustomField>
    <fullName>Grad_Anticipated_Term__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(Peoplesoft) ASU_AA_GRD_STRM from PS_ASU_AA_POS Used on the Graduate Student Profile tab.
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Grad Anticipated Term</label>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Student Program Plans (Grad Anticipated Term)</relationshipLabel>
    <relationshipName>Student_Program_Plans4</relationshipName>
    <type>Lookup</type>
</CustomField>