force-app/main/default/objects/Student_Program_Plan__c/fields/Grad_ASU_Hours_After__c.field-meta.xml
<CustomField>
    <fullName>Grad_ASU_Hours_After__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(PeopleSoft) IPOS ASU Hours After Admit
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Grad ASU Hours After</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>