force-app/main/default/objects/Student_Program_Plan__c/fields/Grad_ASU_Hours_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Grad_ASU_Hours_Transfer__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(PeopleSoft) IPOS ASU Hours Transferred; PS_ASU_POS_BTCH.ASU_AA_HRS_XFER
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Grad ASU Hours Transfer</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>