force-app/main/default/objects/Student_Program_Plan__c/fields/Grad_Blanket_Hours__c.field-meta.xml
<CustomField>
    <fullName>Grad_Blanket_Hours__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(PeopleSoft) IPOS Grad Blanket Hours
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Grad Blanket Hours</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>