force-app/main/default/objects/Student_Program_Plan__c/fields/Grad_Continuous_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Grad_Continuous_Enrollment__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(Peoplesoft) IPOS Continuous Enrollment flag from PS_ASU_AA_POS_CENL.ASU_AA_CONT_ENRL
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Grad Continuous Enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>