force-app/main/default/objects/Student_Program_Plan__c/fields/Grad_Culminating_Event__c.field-meta.xml
<CustomField>
    <fullName>Grad_Culminating_Event__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(Peoplesoft) Graduate culminating event from ASU_AA_DGRTXT_SPLAN (view) which is Plan specific.
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Grad Culminating Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>