force-app/main/default/objects/Student_Program_Plan__c/fields/Grad_iPOS_Status__c.field-meta.xml
<CustomField>
    <fullName>Grad_iPOS_Status__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(PeopleSoft) PS_MLSTN_LVL_TBL.DESCRFORMAL
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Grad iPOS Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>