force-app/main/default/objects/Student_Program_Plan__c/fields/Grad_iPOS_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Grad_iPOS_Status_Date__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(PeopleSoft) PS_ASU_AA_POS.ASU_AA_CONT_ENRL
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Grad iPOS Status Date</label>
    <type>Date</type>
</CustomField>