force-app/main/default/objects/Student_Program_Plan__c/fields/Grad_Max_Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>Grad_Max_Time_Limit__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(PeopleSoft) PS_ASU_AA_POS.ASU_AA_TIME_LIMIT
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Grad Max Time Limit</label>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Student Program Plans (Grad Max Time Limit)</relationshipLabel>
    <relationshipName>Student_Program_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>