force-app/main/default/objects/Student_Program_Plan__c/fields/Graduate_Specialization__c.field-meta.xml
<CustomField>
    <fullName>Graduate_Specialization__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(PeopleSoft) Specialization data (ASU_ADS_SPECIALZ) coming from PS_ASU_AA_POS or PS_ASU_ADM_SA_TBL into staging table ENT_PS_ADM_APPL Specialization value for each Active Plan on the Graduate Academics tab
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Grad Specialization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>