force-app/main/default/objects/Student_Program_Plan__c/fields/Organization_Code__c.field-meta.xml
<CustomField>
    <fullName>Organization_Code__c</fullName>
    <businessOwnerGroup>Data_Owner_Registrar</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Data sourced from PS_ACAD_ORG_TBL.ACAD_ORG. PS; used for the SF Advisor Portal, specific to acad_career or Graduate &amp; then the Schools &amp; Departments filter field. This dependent field assists with displaying available schools/departments field values when the Graduate filter is selected.</description>
    <inlineHelpText>This dependent field assists with displaying available schools/departments field values when the Graduate filter is selected.</inlineHelpText>
    <label>Organization Code</label>
    <referenceTo>Organization__c</referenceTo>
    <relationshipLabel>Student Program Plans</relationshipLabel>
    <relationshipName>Student_Program_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>