force-app/main/default/objects/Student_Program_Plan__c/fields/Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Plan_Code__c</fullName>
    <description>Data sourced from ACAD_PLAN_TBL.ACAD_PLAN</description>
    <label>Plan Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>