force-app/main/default/objects/Student_Program_Plan__c/fields/Plan_Description__c.field-meta.xml
<CustomField>
    <fullName>Plan_Description__c</fullName>
    <description>Data sourced from ACAD_PLAN_TBL.DESCR</description>
    <label>Plan Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>