force-app/main/default/objects/Student_Program_Plan__c/fields/Plan_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sequence__c</fullName>
    <description>Data sourced from PS_ACAD_PLAN.PLAN_SEQUENCE</description>
    <label>Plan Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>