force-app/main/default/objects/Student_Program_Plan__c/fields/Plan_Transcript_Description__c.field-meta.xml
<CustomField>
    <fullName>Plan_Transcript_Description__c</fullName>
    <description>Data sourced from PS_ACAD_PLAN_TBL.TRNSCR_DESCR</description>
    <label>Plan Transcript Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>