force-app/main/default/objects/Student_Program_Plan__c/fields/Plan_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type_Text__c</fullName>
    <description>Data sourced from ACAD_PLAN_TBL.ACAD_PLAN_TYPE</description>
    <label>Plan Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>