force-app/main/default/objects/Student_Program_Plan__c/fields/Plan_URL__c.field-meta.xml
<CustomField>
    <fullName>Plan_URL__c</fullName>
    <description>Student Plan URL in PeopleSoft. Data sourced from ASU_ACADP_EXTNS.URL_1</description>
    <label>Plan URL</label>
    <type>Url</type>
</CustomField>