force-app/main/default/objects/Student_Program_Plan__c/fields/Primary_Flag__c.field-meta.xml
<CustomField>
    <fullName>Primary_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Data sourced from PS_STDNT_PROFILE_MAJ_CURRENT.ASU_PRIME_REC_FLG</description>
    <label>Primary Flag</label>
    <type>Checkbox</type>
</CustomField>