force-app/main/default/objects/Student_Program_Plan__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <description>Data sourced from ACAD_PROG_TBL.ACAD_PROG</description>
    <label>Program Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>