force-app/main/default/objects/Student_Program_Plan__c/fields/Program_Description__c.field-meta.xml
<CustomField>
    <fullName>Program_Description__c</fullName>
    <description>Data sourced from ACAD_PROG_TBL.DESCR</description>
    <label>Program Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>