force-app/main/default/objects/Student_Program_Plan__c/fields/Requirement_Term__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Term__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(PeopleSoft)  PS_ACAD_PROG.REQ_TERM
Visible on the Graduate Student Profile tab; Access granted via PS security role 'Student Profile'.</description>
    <label>Requirement Term</label>
    <length>4</length>
    <type>Text</type>
</CustomField>