force-app/main/default/objects/Student_Program_Plan__c/fields/Residency__c.field-meta.xml
<CustomField>
    <fullName>Residency__c</fullName>
    <description>(PeopleSoft) PS_ASU_SR0189_SPRF.RESIDENCY</description>
    <label>Residency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Non-Resident</fullName>
            </value>
            <value>
                <fullName>Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>