force-app/main/default/objects/Student_Program_Plan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Data sourced from PS_ACAD_PROG.ASU_PROGSTATUS1</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active in Program</fullName>
            </value>
            <value>
                <fullName>Completed Program</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
            <value>
                <fullName>Leave of Absence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>