force-app/main/default/objects/Student_Program_Plan__c/fields/Tot_Cumulative__c.field-meta.xml
<CustomField>
    <fullName>Tot_Cumulative__c</fullName>
    <businessOwnerGroup>Data_Owner_AA_Academic_Advising</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>(PeopleSoft) PS_ASU_SR0189_SPRF.TOT_CUMULATIVE</description>
    <label>Total Cumulative Points</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>