force-app/main/default/objects/Student_Program_Plan__c/listViews/AllGraduateProgramPlans.listView-meta.xml
<ListView>
    <fullName>AllGraduateProgramPlans</fullName>
    <columns>Contact__c</columns>
    <columns>Campus__c</columns>
    <columns>Status__c</columns>
    <columns>Action__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Career__c</field>
        <operation>equals</operation>
        <value>Graduate</value>
    </filters>
    <label>All Graduate Program Plans</label>
</ListView>